--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <section class="banner">
     <h2 class="logo">JYO</h2>
   
-    <a .onClick="location.href='Download.html'" href="Download.html" class="plus">+</a>
+    <a .onClick="location.href='Download.html'" href="Download.html" class="plus"></a>
    
        
     <video src="img/pexels-joseph-a-eulo-5286336.mp4" muted loop autoplay></video>  
